# $Id$

2007-04-22	Konstantin V. Arkhipov

	* trunk/core/OSQL/SelectQuery.class.php: getFieldNames() now respects
	aliases.

2007-03-20	Konstantin V. Arkhipov

	* main/Containers/Unified/UnifiedContainer.class.php: fetched
	collection now excluded from serialization.

2007-02-19	Konstantin V. Arkhipov

	* main/Containers/Unified/UnifiedContainer.class.php: unsaved objects
	are not tracked by importList() now.

2007-01-22	Konstantin V. Arkhipov

	* main/DAOs/Handlers/SharedMemorySegmentHandler.class.php: segments
	are now created with 0660 permission, instead of 0600.

2007-01-11	Konstantin V. Arkhipov

	* core/DB/ImaginaryDialect.class.php: missing toString added to
	fullTextSearch()/fullTextRank().

2007-01-08	Konstantin V. Arkhipov

	* 0.6.4 released.

2007-01-06	Konstantin V. Arkhipov

	* ext/src/core/DB/ImaginaryDialect.c: segfault's fix backported from
	trunk.

2007-01-03	Konstantin V. Arkhipov

	* ext/src/core/DB/Dialect.c: rare memory corruption fixed, backported
	from trunk.

2006-12-29	Konstantin V. Arkhipov

	* core/Cache/WatermarkedPeer.class.php: fix for possible cache
	corruption backported from trunk.

2006-12-20	Konstantin V. Arkhipov

	* main/Flow/RedirectView.class.php: now skips arrays and objects in
	query string generation.

2006-11-06	Konstantin V. Arkhipov

	* main/Mail/MimePart.class.php: strange typo in quoted encoding fixed.

	* main/Mail/Mail.class.php: fixed from-address encoding's handling.

	* meta/builders/BaseBuilder.class.php: backported fix for non-required
	Ranges generation.

2006-10-25	Konstantin V. Arkhipov

	* core/DB/MySQL.class.php: always force new link creation for
	non-persistent connections.

2006-10-21	Konstantin V. Arkhipov

	* 0.6.3 released.

2006-10-18	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveImage.class.php: big images' handling
	fixed.

2006-10-07	Konstantin V. Arkhipov

	* meta/: deprecated identifier's description thru property's
	identifier="true"; use shortcut instead - <identifier />.
