@@ -106,6 +106,12 @@ parent::fillObject(\${$varName}, \$array, \$prefix);
 
 
 EOT;
+			} else {
+				$out .= <<<EOT
+		return \$query;
+	}
+
+EOT;
 			}
 			
 			if ($chainFillers) {
