@@ -1,5 +1,10 @@
 # $Id$
 
+2007-05-01	Sergey S. Sergeev
+
+	* meta/builders/BaseBuilder.class.php: return query if setters are
+	empty.
+
 2007-04-22	Konstantin V. Arkhipov
 
 	* trunk/core/OSQL/SelectQuery.class.php: getFieldNames() now respects
